baml_language/crates/baml_cli/src/snapshots/baml_cli__describe_command_tests__render_keyword_generator.snap
---
source: crates/baml_cli/src/describe_command_tests.rs
expression: output
---
generator — Configures code generation for a target language.

Syntax:
  # baml.toml
  [generator.python_client]
  output_type = "python/pydantic"
  output_dir = "."
  naming_convention = "preserve-case"

Generators are declared in `baml.toml` as `[generator.<name>]` tables, where `<name>` is an arbitrary identifier. `output_type` and `naming_convention` are required. `output_dir` is optional and defaults to `..`; BAML creates a `baml_sdk` directory inside it for every generator.

Accepted `output_type` values:

- `"python/pydantic"` — Python with Pydantic v2 models
- `"python/pydantic/v1"` — Python with Pydantic v1 models
- `"typescript/node"` — TypeScript for Node.js
- `"typescript/web"` — TypeScript for web/WASM
- `"swift"` — Swift
- `"go"` — Go
- `"rust"` — Rust
- `"java"` — Java
- `"cpp"` — C++17
- `"csharp"` — C#

`naming_convention` accepts `"preserve-case"` or `"language"`. Go requires `"language"` and also requires `sdk_import_path`.
