baml_language/crates/baml_cli/src/snapshots/baml_cli__describe_command_tests__render_keyword_generic.snap
---
source: crates/baml_cli/src/describe_command_tests.rs
expression: output
---
generic — Explains generic type parameters, bounds, and inference.

Syntax:
  interface Slot<T> {
    value: T
  }
  
  class Box<T extends Named> {
    value: T
  }
  
  function first<I extends Iterator<Item = int>>(it: I) -> I.Item? {
    return it.next()
  }

Declare generic parameters with `<T>` on interfaces, classes, functions, and out-of-body `implements` blocks. Add bounds with `T extends Bound`; the bound can be an interface, a concrete type expression, a union, a function type, or an interface with associated type bindings such as `Iterator<Item = int>`. Function calls usually infer generic arguments from the arguments, so `first(iter)` is normally enough; explicit type arguments are only needed when inference cannot choose. BAML does not use `T: Bound` for generic bounds.
