baml_language/crates/baml_cli/src/snapshots/baml_cli__describe_command_tests__render_keyword_if.snap
---
source: crates/baml_cli/src/describe_command_tests.rs
expression: output
---
if — Conditional branching — executes a block if the condition is true.

Syntax:
  if x > 0 {
    "positive"
  } else if x == 0 {
    "zero"
  } else {
    "negative"
  }
