baml_language/crates/baml_cli/src/snapshots/baml_cli__describe_command_tests__render_keyword_impl.snap
---
source: crates/baml_cli/src/describe_command_tests.rs
expression: output
---
impl — Rust-style shorthand is not BAML syntax; use `implements`.

Syntax:
  implements Label for int {
    function label(self) -> string {
      return self.to_string()
    }
  }

BAML accepts `implements` and the singular `implement`; it does not use `impl`.
