baml_language/crates/baml_cli/src/snapshots/baml_cli__describe_command_tests__render_keyword_interfaces.snap
---
source: crates/baml_cli/src/describe_command_tests.rs
expression: output
---
interfaces — Concept page for BAML interfaces and interface-related syntax.

Syntax:
  interface Iterator {
    type Item
    function next(self) -> Self.Item?
  }
  
  class IntIterator {
    implements Iterator {
      type Item = int
      function next(self) -> Self.Item? {
        return null
      }
    }
  }
  
  function take_one<I extends Iterator<Item = int>>(it: I) -> I.Item? {
    return it.next()
  }

Interfaces are contracts implemented by classes or concrete types. Declare associated types in the interface, bind them inside `implements` blocks with `type Name = Concrete`, constrain them in type positions with `Interface<Name = Type>`, and project them with `T.Name`, `Self.Name`, or `(Concrete as Interface).Name`. Useful related lookups: `baml describe implements`, `baml describe associated`, `baml describe type`, `baml describe Self`, `baml describe generics`, `baml describe projection`, `baml describe as`, `baml describe extends`, and `baml describe default`.
