baml_language/crates/baml_cli/src/snapshots/baml_cli__describe_command_tests__render_keyword_method.snap
---
source: crates/baml_cli/src/describe_command_tests.rs
expression: output
---
method — Declares a function member on a class or interface.

Syntax:
  interface Named {
    function label(self) -> string
    function display(self) -> string {
      return self.label()
    }
  }
  
  class User {
    name: string
  
    implements Named {}
  
    function label(self) -> string {
      return self.name
    }
  }

Methods are written with `function` inside a class, interface, or `implements` block. The receiver parameter is `self`; method calls use `value.method(args)`. In interfaces, a method without a body is required and a method with a body is a default method. A same-named class method can satisfy an empty `implements I {}` block when its signature matches the interface method.
