baml_language/crates/baml_cli/src/snapshots/baml_cli__describe_command_tests__render_keyword_playground.snap
---
source: crates/baml_cli/src/describe_command_tests.rs
expression: output
---
playground — Serves the BAML playground web UI for a project and opens it in a browser.

Syntax:
  baml playground                      # current project, first free port from 4265
  baml playground --from ./my-app      # explicit project directory
  baml playground --file ./one.baml    # standalone single file
  baml playground --port 4265          # pin the port (errors if taken)
  baml playground --no-open            # don't launch a browser (automatic in SSH/headless sessions)

`baml playground` starts a loopback-only web server hosting the playground UI
and an LSP backend for the loaded project. It binds the first free port from
4265 (scanning up to 4364) unless `--port` pins one, prints the URL to stdout,
and opens a browser unless `--no-open` is set or the session is headless
(SSH, or no display on Linux).

On a remote machine, forward the port and open the printed URL locally:

  ssh -L 4265:localhost:4265 user@host

See also: `baml describe check`.
